--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,8 +9,7 @@ env:
   REMOTE_HOST: ${{ secrets.EC2_HOST }}
   REMOTE_USER: ${{ secrets.EC2_USER }}
   TARGET: ${{ secrets.EC2_OUTPUT_DIR }}
-  # SOURCE: 'WebScraper'
-  SOURCE: '.'
+  SOURCE: '../WebScraper'
 
 jobs:
   deploy:
