--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,11 +5,16 @@ on:
     branches:
       - main
 env:
+  # for easingthemes/ssh-deploy
   SSH_PRIVATE_KEY: ${{ secrets.EC2_KEY }}
   REMOTE_HOST: ${{ secrets.EC2_HOST }}
   REMOTE_USER: ${{ secrets.EC2_USER }}
   TARGET: ${{ secrets.EC2_OUTPUT_DIR }}
   SOURCE: '../WebScraper'
+  # for gen_config.py
+  LINE_ACCESS_TOKEN: ${{ secrets.LINE_ACCESS_TOKEN }}
+  GOOGLE_ACCESS_TOKEN: ${{ secrets.GOOGLE_ACCESS_TOKEN }}
+  GOOGLE_WORKBOOK_KEY: ${{ secrets.GOOGLE_WORKBOOK_KEY }}
 
 jobs:
   deploy:
@@ -18,14 +23,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    # - name: Set up Python 3.10
-    #   uses: actions/setup-python@v2
-    # - name: Configure AWS credentials
-    #   uses: aws-actions/configure-aws-credentials@v1
-    #   with:
-    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #     aws-region: ap-northeast-1
-
+    - name: Set up Python 3.10.1
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10.1'
+        architecture: 'x64'
+    - name: Get Python version
+      run: python -V
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+    - name: Generate configuretion file
+      run: python ./app/MercariPriceMonitor/gen_config.py --line_token LINE_ACCESS_TOKEN --google_token GOOGLE_ACCESS_TOKEN --google_workbook GOOGLE_WORKBOOK_KEY
     - name: Deploy to EC2
       uses: easingthemes/ssh-deploy@v2.1.1
