--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,7 +11,7 @@ env:
   REMOTE_USER: ${{ secrets.EC2_USER }}
   TARGET: ${{ secrets.EC2_OUTPUT_DIR }}
   SOURCE: '../WebScraper'
-  
+
 jobs:
   deploy:
     name: Deploy
@@ -24,11 +24,13 @@ jobs:
       with:
         python-version: '3.10.1'
         architecture: 'x64'
-    - name: Get Python version
-      run: python -V
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+    # - name: Get Python version
+    #   run: python -V
+    # - name: Install dependencies
+    #   run: pip install -r requirements.txt
+    - name: Generate GoogleAccessTokenFile
+      run: ${{ secrets.GOOGLE_ACCESS_TOKEN }}>./app/MercariPriceMonitor/google_token_file.json
     - name: Generate configuretion file
-      run: python ./app/MercariPriceMonitor/gen_config.py --line_token ${{ secrets.LINE_ACCESS_TOKEN }} --google_token ${{ secrets.GOOGLE_ACCESS_TOKEN }} --google_workbook ${{ secrets.GOOGLE_WORKBOOK_KEY }}
+      run: python ./app/MercariPriceMonitor/gen_config.py --line_token ${{ secrets.LINE_ACCESS_TOKEN }} --google_token_file ./app/MercariPriceMonitor/google_token_file.json --google_workbook ${{ secrets.GOOGLE_WORKBOOK_KEY }}
     - name: Deploy to EC2
       uses: easingthemes/ssh-deploy@v2.1.1
