--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,6 +28,12 @@ jobs:
     #   run: python -V
     # - name: Install dependencies
     #   run: pip install -r requirements.txt
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-1
     - name: Generate GoogleAccessTokenFile
       run: echo -E '${{ secrets.GOOGLE_ACCESS_TOKEN }}'>./app/MercariPriceMonitor/google_token_file.json
     - name: Generate configuretion file
@@ -36,3 +42,10 @@ jobs:
       run: rm ./app/MercariPriceMonitor/google_token_file.json
     - name: Deploy to EC2
       uses: easingthemes/ssh-deploy@v2.1.1
+    - name: Run LineNotify-Lambda
+      run: |
+        aws lambda invoke \
+        --function-name LineNotify \
+        --payload '{ "access_token":${{ secrets.LINE_ACCESS_TOKEN }}, "url":"https://notify-api.line.me/api/notify", "message": "Finished deploy for WebScraper." }'  \
+        --cli-binary-format raw-in-base64-out \
+        --region ap-northeast-1 response.json
