--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,6 +46,6 @@ jobs:
       run: |
         aws lambda invoke \
         --function-name LineNotify \
-        --payload $(echo '{ "access_token":${{ secrets.LINE_ACCESS_TOKEN }}, "url":"https://notify-api.line.me/api/notify", "message": "Finished deploy for WebScraper." }' | base64)  \
+        --payload $(echo -E '{ "access_token":${{ secrets.LINE_ACCESS_TOKEN }}, "url":"https://notify-api.line.me/api/notify", "message": "Finished deploy for WebScraper." }' | base64)  \
         --cli-binary-format raw-in-base64-out \
         --region ap-northeast-1 response.json
