--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -52,22 +52,27 @@ jobs:
         --message "Finished deploy for WebScraper."
     
     - name: Run LineNotify-Lambda
-      id: run_line_notify_lambda
       run: |
         aws lambda invoke \
         --function-name LineNotify \
         --payload file://./aws_lambda/line_notify/payload.json \
         --cli-binary-format raw-in-base64-out \
-        --region ap-northeast-1 response.json
+        --region ap-northeast-1 ./aws_lambda/line_notify/response.json
+    
+    - name: Check Response of LineNotify-Lambda
+      id: check_response_line_notify_lambda
+      run: |
+        python ./aws_lambda/line_notify/check_response.py \
+        --resfile ./aws_lambda/line_notify/response.json
   
     - name: run if fail_step failed
-      if: failure() && steps.run_line_notify_lambda.outcome == 'failure'
-      run: echo "${{ steps.run_line_notify_lambda.outcome }}"
+      if: failure() && steps.check_response_line_notify_lambda.outcome == 'failure'
+      run: echo "${{ steps.check_response_line_notify_lambda.outcome }}"
     
     - name: Delete File for LineNotify
       run: |
         rm ./aws_lambda/line_notify/payload.json
-        rm ./response.json
+        rm ./aws_lambda/line_notify/response.json
     
     - name: Deploy to EC2
       uses: easingthemes/ssh-deploy@v2.1.1
