--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,13 +4,6 @@ on:
   push:
     branches:
       - main
-env:
-  # for easingthemes/ssh-deploy
-  SSH_PRIVATE_KEY: ${{ secrets.EC2_KEY }}
-  REMOTE_HOST: ${{ secrets.EC2_HOST }}
-  REMOTE_USER: ${{ secrets.EC2_USER }}
-  TARGET: ${{ secrets.EC2_OUTPUT_DIR }}
-  SOURCE: '../WebScraper'
 
 jobs:
   deploy:
@@ -48,7 +41,6 @@ jobs:
     - name: Generate PayloadFile for LineNotify
       run: |
         python ./aws_lambda/line_notify/gen_payload.py \
-        --access_token ${{ secrets.LINE_ACCESS_TOKEN }} \
         --message "Finished deploy for WebScraper."
     
     - name: Run LineNotify-Lambda
@@ -76,3 +68,10 @@ jobs:
     
     - name: Deploy to EC2
       uses: easingthemes/ssh-deploy@v2.1.1
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_KEY }}
+        REMOTE_HOST: ${{ secrets.EC2_HOST }}
+        REMOTE_USER: ${{ secrets.EC2_USER }}
+        TARGET: ${{ secrets.EC2_OUTPUT_DIR }}
+        SOURCE: '../WebScraper'
+        ARGS: "--delete"
